fixed typo, added promo info, moved new buisness info

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	</div-->
 
 <!--====== PROMO PART START ======-->
-<!--section id="promo" class="about-area pt-0 pb-0" style="background-color: #f57cb0; color: white;">
+<section id="promo" class="about-area pt-0 pb-0" style="background-color: #f57cb0; color: white;">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -181,37 +181,6 @@
                             <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important; color: #f57cb0 !important;" href="#price">poznaj ceny</a></li>
                         </ul>                       
                         <span style="font-size: 12px">Z wyłączeniem animacji w przedszkolu</span>
-                        <br/>
-                    </p>
-                    <br/>
-                </div> <!-- section title -->
-            <!--/div>
-        </div> <!-- row -->
-    <!--/div> <!-- container -->
-<!--/section>
-<!--====== PROMO PART ENDS ======-->
-
-<!--====== PROMO PART START ======-->
-<section id="promo" class="about-area pt-0 pb-0" style="background-color: black; color: white;">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="section-title text-center">
-                    <br/>                    
-                    <a href="https://fotobudka360selfie.pl/" class="logo d-flex align-items-center" aria-label="Logo">
-                        <img src="assets/images/logo.webp" alt="" height="300" width="300" style="
-                        display: block;
-                        margin-left: auto;
-                        margin-right: auto;">
-                    </a>
-                    <br/>
-                    <h2 class="title" style="font-size: 32px !important; font-weight: bold; color: white;">Nowość!</h5>    
-                    <p style="color: white; font-weight: bold; font-size: 22px;">
-                        Jeżeli chcesz uatrakcyjnić swoje wydarzenie fotobudką 360 zapraszamy do kontaktu i zapoznania się z naszą oferta
-                        <br/><br/>				
-                        <ul>
-                            <li><a title="Oferta Fotobudka" class="main-btn custom" style="background-color: #fff !important; color: black !important;" href="https://fotobudka360selfie.pl/">Pełna Oferta</a></li>
-                        </ul>                        
                         <br/>
                     </p>
                     <br/>
@@ -342,7 +311,7 @@
                             <p>
 								Halloween, mikołajki, bal karnawałowy!
 								
-								Tu liczył się dobra zabawa! Organizujemy animacje podczas imprez firmowych, a także w przedszkolach, szkołach i na salach zabaw.
+								Tu liczy się dobra zabawa! Organizujemy animacje podczas imprez firmowych, a także w przedszkolach, szkołach i na salach zabaw.
 								Podczas balu na dzieci będzie czekała moc atrakcji: konkursy z nagrodami, tańce, zabawy z kolorową chustą, balonowe zoo i wiele więcej!
 							</p>
                         </div>
@@ -904,6 +873,39 @@
         </div> <!-- container -->		
     </section>	
     <!--====== CONTACT PART ENDS ======-->
+
+    
+
+<!--====== BUSINESS INFO START ======-->
+<section id="promo" class="about-area pt-0 pb-0" style="background-color: black; color: white;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="section-title text-center">
+                    <br/>                    
+                    <a href="https://fotobudka360selfie.pl/" class="logo d-flex align-items-center" aria-label="Logo">
+                        <img src="assets/images/logo.webp" alt="" height="300" width="300" style="
+                        display: block;
+                        margin-left: auto;
+                        margin-right: auto;">
+                    </a>
+                    <br/>
+                    <h2 class="title" style="font-size: 32px !important; font-weight: bold; color: white;">Nowość!</h5>    
+                    <p style="color: white; font-weight: bold; font-size: 22px;">
+                        Jeżeli chcesz uatrakcyjnić swoje wydarzenie fotobudką 360 zapraszamy do kontaktu i zapoznania się z naszą oferta
+                        <br/><br/>				
+                        <ul>
+                            <li><a title="Oferta Fotobudka" class="main-btn custom" style="background-color: #fff !important; color: black !important;" href="https://fotobudka360selfie.pl/">Pełna Oferta</a></li>
+                        </ul>                        
+                        <br/>
+                    </p>
+                    <br/>
+                </div> <!-- section title -->
+            </div>
+        </div> <!-- row -->
+    </div> <!-- container -->
+</section>
+<!--====== BUSINESS INFO ENDS ======-->
 
     <!--====== FOOTER PART START ======-->
     <footer id="footer" class="footer-area">
