--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                             <h4 id="birthday-price">500 ZŁ</h4>	
                             <br/>					
                             <ul>
-                                <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important;" href="assets/pdf/oferta_2023.pdf">pełna oferta</a></li>
+                                <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important;" href="assets/pdf/oferta_urodzinowe_2024.pdf">pełna oferta</a></li>
                             </ul>   
 							</p>
                         </div>
@@ -469,7 +469,7 @@
                             <h4 id="wedding-price">600 ZŁ</h4>	
                             <br/>					
                             <ul>
-                                <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important;" href="assets/pdf/oferta_okolicznosciowe.pdf">pełna oferta</a></li>
+                                <li><a title="Oferta PDF" class="main-btn custom" style="background-color: #fff !important;" href="assets/pdf/oferta_okolicznosciowe_2024.pdf">pełna oferta</a></li>
                             </ul>   
 							</p>
                         </div>
@@ -544,9 +544,13 @@
                         <br><br>
                         <ul style="list-style-type:disc; text-align: left; margin-left: 25px;"> 
                             <li><span style="color: #f9c27a;"><b>Eko torby </b></span>- własnoręczne ozdabianie toreb według wzoru lub własnego pomysłu. Dzieci
-                                zabierają torby na pamiątkę. Zalecane dla dzieci w wieku 5-12 lat (+10 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
+                                zabierają torby na pamiątkę. Zalecane dla dzieci w wieku 5-12 lat (+20 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
                             <li><span style="color: #f9c27a;"><b>Sensoryczne gniotki</b></span> - dzieci wykonają samodzielnie antystresową piłeczkę z wykorzystaniem
-                                kulek hydrożelowych orbis. Zalecane dla dzieci w wieku 5-12 lat. (+10 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
+                                kulek hydrożelowych orbis. Zalecane dla dzieci w wieku 5-12 lat. (+15 zł/dziecko) <b style="color: #f57cb0;">HIT</b></li>
+                            <li><span style="color: #f9c27a;"><b>Breloki</b></span> - Dzieci będą miały możliwość zaprojektować i wykonać własne breloczki 
+                                do kluczy lub telefonu (+20 zł/dziecko) <b style="color: #f57cb0;">NOWOŚĆ</b></li>
+                            <li><span style="color: #f9c27a;"><b>Malowanie figurek gipsowych</b></span> - warsztat polega na malowaniu i ozdabianiu gipsowych 
+                                figur (+15 zł/dziecko) <b style="color: #f57cb0;">NOWOŚĆ</b></li>
                             <li><span style="color: #f9c27a;"><b>Lego kreatywne budowanie</b></span> - każde dziecko otrzymuje tackę i wraz z animatorem buduje
                                 według wybranego tematu. Zalecane dla dzieci w wieku przedszkolnym (+5 zł/dziecko) </li>
                             <li><span style="color: #f9c27a;"><b>Ceramika</b></span> z wykorzystaniem samoutwardzalnej masy ceramicznej  (+10 zł/dziecko)</li>
